fix the alignment

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ section {
 }
 
 #about {
-  background-color: #1a1a1a;
+  background-color: #4b4b4e;
 }
 
 #skills {
@@ -30,7 +30,7 @@ section {
 }
 
 #experience {
-  background-color: #1a1a1a;
+  background-color: #4b4b4e;
 }
 
 #portfolio {
