--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -89,7 +89,7 @@
 .thank-you-message {
   margin-top: 60px; /* Increased space above the message */
   font-size: 18px;
-  color: #888;
+  color: #ffffff;
   font-style: italic;
 }
 
